# orchestera-lib

./: Makefile  main.py  pyproject.toml
.github/workflows/: publish.yml
src/orchestera/clients/: sync_client.py
src/orchestera/entrypoints/: base_entrypoint.py  sparklith_entrypoint.py
src/orchestera/kubernetes/: pod_spec_builder.py
src/orchestera/spark/: session.py
